# glide

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: greenland_forward.py  greenland_inverse.py
examples/antarctica/: antarctica_forward.py  antarctica_inverse.py
examples/bitterroot/: bitterroot.py
examples/greenland/: greenland_forward.py  greenland_inverse.py
examples/ismip-hom/: ismip-hom-inverse.py  ismip-hom.py
glide/: __init__.py  data.py  grid.py  io.py  kernels.py  physics.py  solver.py
glide/cuda/: common.cu  flux.cu  grad.cu  ice_kernels.cu  residuals.cu  stress.cu  utility.cu  utility_kernels.cu  vanka.cu  viscosity.cu
